# telemetry-processor-example

./: .gitignore  Makefile  README.md  SUMMARY_REPORT.md
backend/: pyproject.toml
backend/telemetry_processor/: __init__.py  alias_maps.py  api.py  cli.py  metrics.py  models.py  normalization.py  pipeline.py  simulator.py  state_machine.py  time_utils.py
backend/telemetry_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/tests/: test_normalization.py  test_pipeline.py
data/: events.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: CellComparison.tsx  Dashboard.tsx  DataQualityPanel.tsx  FaultList.tsx  LoadingState.tsx  MetricCard.tsx  StateBadge.tsx  ThroughputChart.tsx
frontend/src/lib/: format.ts
frontend/src/mock/: processed_metrics.json
frontend/src/styles/: app.css
reports/: metrics.json
